@@ -67,8 +67,12 @@
     white-space: nowrap;
 }
 
-.table-row-variant(selected, @state-info-bg);
-.list-group-item-variant(selected, @state-info-bg, @state-info-text);
+.list-group-item-variant(selected; @state-info-bg; @state-info-text);
+.table-row-variant(selected; @state-info-bg);
+/* Duplicate bootstrap variant to have precedence over selected */
+.table-row-variant(success; @state-success-bg);
+.table-row-variant(warning; @state-warning-bg);
+.table-row-variant(danger; @state-danger-bg);
 
 .tab-form, .tab-board {
     nav.toolbar {
